commit-10: Setup single post retrieval
