# routes/feedRoutes.js
@@ -18,4 +18,7 @@ router.post(
   feedController.createPost
 );
 
+//GET /feed/post/{postId}
+router.get("/post/:postId", feedController.getPost);
+
 module.exports = router;
